--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,5 +6,5 @@
 
 body {
    background-color: #ff0000;
-   // background: url("../img/2.jpg") 0 0 / 100% no-repeat;
+   background: url("../img/2.jpg") 0 0 / 100% no-repeat;
 }
